# bank-account-management

./: .pre-commit-config.yaml  README.md  compose.dev.yaml  pyproject.toml  schema.yaml
bank_account/accounts/: apps.py  models.py
bank_account/accounts/migrations/: 0001_initial.py
bank_account/bank/: admin.py  apps.py  conftest.py  models.py  urls.py
bank_account/bank/api/: serializers.py  views.py
bank_account/bank/migrations/: 0001_initial.py
bank_account/bank/tests/: test_bank_models.py  test_bank_views.py
compose/dev/: Dockerfile
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py
